--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -24,7 +24,7 @@
             <label for="gateway">Gateway Address</label>
             <input type="text" id ="gateway" name="gateway" value="192.168.1.1"><br>
             <label for="tokentelegram">Token Telegram</label>
-            <input type="text" id ="tokentelegram" name="tokentelegram" value="XXXXXX:XXXXXXXXXXXXXXXXXXXX"><br>
+            <input type="text" id ="tokentelegram" name="tokentelegram" value="5757301423:AAGxv26Lm6umiZ1BkcNM-X1-fAMGlqMAGDc"><br>
             <input type ="submit" value ="Submit">
           </p>
         </form>
