--- a/data/index.html
+++ b/data/index.html
@@ -43,7 +43,7 @@
     <sup class="units">kPa</sup>
 
   </p>
-<p><a href="clima.txt">LOG SENSORES</a>||<a href="loggrafico">LOG GRAFICO</a></p>
+<p><a href="clima.txt" title="Para deletar os LOGS digite /deletelog ">LOG SENSORES</a>||<a title="Manda um alo para o SantoCyber" href="loggrafico">LOG GRAFICO</a>||<a title="Manda um alo para o SantoCyber" href="log2.html">HISTORICO</a></p>
 
 
 
@@ -631,3 +631,4 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
     </div>
   </body>
 </html>
+<a href="/credito"> Agradecimentos ao desenvolvedor</a>
