--- a/data/log.html
+++ b/data/log.html
@@ -1,4 +1,4 @@
-<!-- Complete project details: https://randomnerdtutorials.com/esp32-plot-readings-charts-multiple/ -->
+<!-- Complete project details at github @SantoCyber -->
 
 <!DOCTYPE html>
 <html>
@@ -8,19 +8,24 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
   </head>
   <body>
     <div class="topnav">
       <h1>MushLight Logger</h1>
     </div>
+<a href="./">VOLTAR</a>
     <div class="content">
       <div class="card-grid">
         <div class="card">
-          <p class="card-title">Sensores</p>
+          <p class="card-title">MushLight Sensores</p>
           <div id="chart-temperature" class="chart-container"></div>
         </div>
       </div>
     </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
+<a href=/deletelog>Deleta o LOG! CUIDADO!</a>
