--- a/data/log2.html
+++ b/data/log2.html
@@ -1,4 +1,4 @@
-<!-- Complete project details: https://randomnerdtutorials.com/esp32-plot-readings-charts-multiple/ -->
+<!-- Complete project at github @SantoCyber -->
 
 <!DOCTYPE html>
 <html>
@@ -7,38 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="script.js"></script>
- <script type="text/javascript" src="data.json"></script>
-
-
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
   </head>
   <body>
     <div class="topnav">
       <h1>MushLight Logger</h1>
     </div>
-    <div class="content">
-      <div class="card-grid">
-        <div class="card">
-          <p class="card-title">Sensores</p>
-          <div id="chart-temperature" class="chart-container"></div>
-        </div>
-      </div>
-
-    </div>
+<a href="./">VOLTAR</a>
     <div class="content">
       <div class="card-grid">
         <div class="card">
           <p class="card-title">Historico</p>
-          <div id="chart-historical" class="container"></div>
+          <div id="chart-historical" class="chart-container"></div>
         </div>
       </div>
     </div>
+    <script src="script2.js"></script>
 
-
-
+<object data="data.txt" width="400" height="300">
+Not supported
+</object>
 
   </body>
 </html>
+<a href=/deletelog>Deleta o LOG! CUIDADO!</a>
