--- a/data/index.html
+++ b/data/index.html
@@ -108,6 +108,7 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
           <p>
             <a href="ledon"><button class="button-on">LIGA</button></a>
             <a href="off"><button class="button-off">OFF</button></a>
+            <a href="sleep"><button class="button-off">SLEEP</button></a>
  <span class="popuptext" id="myPopup">Selecione a cor e clique em enviar</span>
 
           </p>
