--- a/data/index.html
+++ b/data/index.html
@@ -575,6 +575,78 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
 </td>
 
 </tr>
+<tr>
+<td>
+                        <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>KeepWalking</p>
+          <p>
+            <a href="gif9"><button class="button-on">LIGA</button></a>
+
+</td>
+
+<td>
+
+                    <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>DOGE Coin</p>
+          <p>
+            <a href="doge"><button class="button-on">LIGA</button></a>
+</td>
+<td>
+
+                    <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>Monero Coin</p>
+          <p>
+            <a href="xmr"><button class="button-on">LIGA</button></a>
+</td>
+<td>
+
+                    <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>Dolar</p>
+          <p>
+            <a href="dolar"><button class="button-on">LIGA</button></a>
+
+
+</td>
+
+</tr>
+<tr>
+<td>
+                        <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>FLying</p>
+          <p>
+            <a href="newone"><button class="button-on">LIGA</button></a>
+
+</td>
+
+<td>
+
+                    <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>Spiral</p>
+          <p>
+            <a href="spiraltwo"><button class="button-on">LIGA</button></a>
+</td>
+<td>
+
+                    <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>PapaiNoel</p>
+          <p>
+            <a href="papainoel"><button class="button-on">LIGA</button></a>
+</td>
+<td>
+
+                    <div class="card">
+          <p class="card-title"><i class="fas fa-lightbulb"></i>Dots</p>
+          <p>
+            <a href="dots"><button class="button-on">LIGA</button></a>
+
+
+</td>
+
+</tr>
+
+
+
+
 
 <tr>
 <td>
@@ -625,11 +697,10 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
   }
   function isOdd(n) { return Math.abs(n % 2) == 1; }
 </script>
-</html>
 
 
 
+<a href="/credito"> Agradecimentos ao desenvolvedor</a>
     </div>
   </body>
 </html>
-<a href="/credito"> Agradecimentos ao desenvolvedor</a>
