--- a/data/index.html
+++ b/data/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+<link rel="manifest" href="manifest.json">
+<script>
+if ('serviceWorker' in navigator) {
+navigator.serviceWorker.register('sw.js');
+}
+</script>
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="green">
+<meta name="apple-mobile-web-app-title" content="MushLight">
+
     <title>MushLight Control</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -672,14 +683,14 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
 <body>
   <div id="container">
     <h2>MushLight Sorria</h2>
-    <p>Leva uns 5 segundinhos para tirar uma foto.</p>
+    <p>Leva 5 segundinhos para tirar uma foto.</p>
     <p>
-      <button onclick="rotatePhoto();">ROTATE</button>
-      <button onclick="capturePhoto()">CAPTURE PHOTO</button>
-      <button onclick="location.reload();">REFRESH PAGE</button>
+      <button class="button-on" onclick="rotatePhoto();">Gira</button>
+      <button class="button-on" onclick="capturePhoto()">Tira Foto</button>
+      <button class="button-on" onclick="location.reload();">Refresh</button>
     </p>
   </div>
-  <div><img src="saved-photo" id="photo" width="70%"></div>
+  <div><img src="saved-photo" id="photo" width="50%"></div>
 </body>
 <script>
   var deg = 0;
