--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -19,10 +19,8 @@
             <input type="text" id ="ssid" name="ssid"><br>
             <label for="pass">Password</label>
             <input type="text" id ="pass" name="pass"><br>
-            <label for="ip">IP Address</label>
-            <input type="text" id ="ip" name="ip" value="192.168.1.200"><br>
-            <label for="gateway">Gateway Address</label>
-            <input type="text" id ="gateway" name="gateway" value="192.168.1.1"><br>
+             <label for="nomebot">Nome do bot/label>
+            <input type="text" id ="nomedobot" name="nomedobot" value="MushBOT"><br>
             <label for="tokentelegram">Token Telegram</label>
             <input type="text" id ="tokentelegram" name="tokentelegram" value="5757301423:AAGxv26Lm6umiZ1BkcNM-X1-fAMGlqMAGDc"><br>
             <input type ="submit" value ="Submit">
