--- a/Mushcam/data/wifimanager.html
+++ b/Mushcam/data/wifimanager.html
@@ -19,6 +19,8 @@
             <input type="text" id ="ssid" name="ssid"><br>
             <label for="pass">Password</label>
             <input type="text" id ="pass" name="pass"><br>
+            <label for="nomedobot">Nome do BOT:</label>
+            <input type="text" id ="nomedobot" name="nomedobot" value="MushCAM0001"><br>
             <label for="tokentelegram">Token Telegram</label>
             <input type="text" id ="tokentelegram" name="tokentelegram" value="5937374406:AAHFsBXbpUc_dPmiCbdUrBiVIF3CmZpKJDI"><br>
             <input type ="submit" value ="Submit">
