--- a/MushFINAL/data/wifimanager.html
+++ b/MushFINAL/data/wifimanager.html
@@ -19,7 +19,7 @@
             <input type="text" id ="ssid" name="ssid"><br>
             <label for="pass">Password</label>
             <input type="text" id ="pass" name="pass"><br>
-             <label for="nomebot">Nome do bot</label>
+             <label for="nomedobot">Nome do bot</label>
             <input type="text" id ="nomedobot" name="nomedobot" value="MushBOT"><br>
             <label for="tokentelegram">Token Telegram</label>
             <input type="text" id ="tokentelegram" name="tokentelegram" value="5757301423:AAGxv26Lm6umiZ1BkcNM-X1-fAMGlqMAGDc"><br>
