--- a/MushFINAL/data/index.html
+++ b/MushFINAL/data/index.html
@@ -688,6 +688,7 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
       <button class="button-on" onclick="rotatePhoto();">Gira</button>
       <button class="button-on" onclick="capturePhoto()">Tira Foto</button>
       <button class="button-on" onclick="location.reload();">Refresh</button>
+      <a href="lersd"><button class="button-on">LISTA</button><a/>
     </p>
   </div>
   <div><img src="saved-photo" id="photo" width="50%"></div>
