--- a/MushFINAL/data/index.html
+++ b/MushFINAL/data/index.html
@@ -686,9 +686,10 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
     <p>Leva 5 segundinhos para tirar uma foto.</p>
     <p>
       <button class="button-on" onclick="rotatePhoto();">Gira</button>
-      <button class="button-on" onclick="capturePhoto()">Tira Foto</button>
+      <button class="button-on" onclick="capturePhoto()">Foto</button>
       <button class="button-on" onclick="location.reload();">Refresh</button>
-      <a href="lersd"><button class="button-on">LISTA</button><a/>
+       <a href="lersd"><button class="button-on">LISTA</button><a/>
+        <a href="indexcam.html"><button class="button-on">STREAM</button><a/>
     </p>
   </div>
   <div><img src="saved-photo" id="photo" width="50%"></div>
