--- a/MushFINAL/data/index.html
+++ b/MushFINAL/data/index.html
@@ -54,7 +54,7 @@ navigator.serviceWorker.register('sw.js');
     <sup class="units">kPa</sup>
 
   </p>
-<p><a href="clima.txt" title="Para deletar os LOGS digite /deletelog ">LOG SENSORES</a>||<a title="Manda um alo para o SantoCyber" href="loggrafico">LOG GRAFICO</a>||<a title="Manda um alo para o SantoCyber" href="log2.html">HISTORICO</a></p>
+<p><a href="climalog" title="Para deletar os LOGS digite /deletelog ">LOG SENSORES</a>||<a title="Manda um alo para o SantoCyber" href="loggrafico">LOG GRAFICO</a>||<a title="Manda um alo para o SantoCyber" href="log2.html">HISTORICO</a></p>
 
 
 
