--- a/MushFINAL/data/log2.html
+++ b/MushFINAL/data/log2.html
@@ -26,7 +26,7 @@
     </div>
     <script src="script2.js"></script>
 
-<object data="data.txt" width="400" height="300">
+<object data="/log" width="400" height="300">
 Not supported
 </object>
 
