--- a/MushFINAL/data/index.html
+++ b/MushFINAL/data/index.html
@@ -688,8 +688,11 @@ Dimmer:<input type="text" id ="dimmer" name="dimmer" value="250"><br>
       <button class="button-on" onclick="rotatePhoto();">Gira</button>
       <button class="button-on" onclick="capturePhoto()">Foto</button>
       <button class="button-on" onclick="location.reload();">Refresh</button>
-       <a href="lersd"><button class="button-on">LISTA</button><a/>
-        <a href="indexcam.html"><button class="button-on">STREAM</button><a/>
+<a href="lersd"><button class="button-on">LISTA</button><a/>
+<a href="indexcam.html"><button class="button-on">STREAM</button><a/><br>
+<a href="flashcam"><button class="button-on">FLASH</button><a/>
+<a href="pir"><button class="button-on">PIR</button><a/>
+<a href="timelapse"><button class="button-on">TIMELAPSE</button><a/>
     </p>
   </div>
   <div><img src="saved-photo" id="photo" width="50%"></div>
