--- a/MushFINAL/data/indexcam.html
+++ b/MushFINAL/data/indexcam.html
@@ -49,7 +49,7 @@ navigator.serviceWorker.register('sw.js');
     <p>
       <a href="./"><button class="button-on">Voltar</button><a/>
       <button class="button-on" onclick="rotatePhoto();">Gira</button>
-      <button class="button-on" onclick="capturePhoto()">Tira Foto</button>
+      <button class="button-on" onclick="capturePhoto()">Foto</button>
       <button class="button-on" onclick="location.reload();">Refresh</button>
       <a href="lersd"><button class="button-on">LISTA</button><a/>
     </p>
